# OpenJK

./: CMakeLists.txt  Dockerfile  dockerbuild.sh
CMakeModules/: InstallConfig.cmake
codemp/: CMakeLists.txt
codemp/game/: CMakeLists.txt  g_public.h
codemp/qcommon/: common.cpp  cvar.cpp  files.cpp  net_chan.cpp  q_shared.c  q_shared.h  qcommon.h
codemp/server/: kdtree.c  server.h  sv_ccmds.cpp  sv_client.cpp  sv_curl.cpp  sv_database.cpp  sv_game.cpp  sv_gameapi.cpp  sv_gameapi.h  sv_geoip.cpp  sv_init.cpp  sv_location.cpp  sv_main.cpp  sv_snapshot.cpp  sv_sqlite.cpp  sv_world.cpp
lib/libcurl/lib/: libcurl.lib
lib/sqlite/: CMakeLists.txt
shared/qcommon/: q_string.c  q_string.h
